--- a/main/locale/en/LC_MESSAGES/django.po
+++ b/main/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-10-22 20:07+0200\n"
+"POT-Creation-Date: 2012-10-23 18:43+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -137,6 +137,10 @@ msgstr "Contact"
 #: models.py:84
 msgid "Contactos"
 msgstr "Contactos"
+
+#: templates/base.html:48
+msgid "Todos los derechos reservados."
+msgstr "All rights reserved."
 
 #: templates/poll.html:4
 msgid "Encuesta"
