--- a/main/locale/en/LC_MESSAGES/django.po
+++ b/main/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-10-23 18:43+0200\n"
+"POT-Creation-Date: 2012-10-23 19:11+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -283,15 +283,18 @@ msgid "Enviar"
 msgstr "Send"
 
 #: templates/thanks.html:30
+msgid "Te puedes subscribir a la cuenta de twitter "
+msgstr "You can follow "
+
+#: templates/thanks.html:30
 msgid ""
-"Te puedes subscribir a la cuenta de twitter @psidium_project y asi "
-"mantendrás el control de tu comunicación con nosotros. De nuevo, sólo "
+" y asi mantendrás el control de tu comunicación con nosotros. De nuevo, sólo "
 "utilizaremos esta cuenta para anunciar el lanzamiento de nuestro proyecto: "
 "0% Spam."
 msgstr ""
-"You can follow @psidium_project in twitter and way you will maintain control "
-"over our communication with you. Again, we will only use this account to "
-"announce the launch of our product. 0% Spam."
+" in twitter and that way you will maintain control over our communication "
+"with you. Again, we will only use this account to announce the launch of our "
+"product. 0% Spam."
 
 #: templates/thanks.html:33
 msgid "Puedes añadir la página "
